# graphite

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: context.cpp
src/includes/core/: context.hpp  glhandle.hpp
src/includes/utility/: disposable.hpp  event.hpp  logger.hpp
